<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profilep" />
        <item
            android:id="@+id/nav_addAdmin"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_addAdmin" />
        <item
            android:id="@+id/nav_approval"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_approval" />
        <item
            android:id="@+id/nav_logoutP"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_logoutp" />
    </group>

<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
-->

</menu>
