<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_assignment_ind_black_24dp"
            android:title="@string/menu_profile" />
       <!-- <item
            android:id="@+id/nav_studentDetails"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/menu_studentDetails" />-->
        <item
            android:id="@+id/nav_marks"
            android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
            android:title="@string/menu_marks" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_view" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_settings_power_black_24dp"
            android:title="@string/menu_logout" />
    </group>

   <!-- <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
-->
</menu>
